# cv-quality

./: MANIFEST.in  README.md  pyproject.toml
cvquality/: __init__.py
cvquality/active_learning/: loop.py
cvquality/active_learning/backends/: pytorch_backend.py  tensorflow_backend.py
cvquality/cli/: main.py
cvquality/io/: report.py
cvquality/quality/: annotation_checks.py
cvquality/recipes/: coco.py  imagenet.py
cvquality/stats/: dataset_stats.py
tests/: conftest.py  smoke_test.py  test_active_learning.py  test_io.py  test_quality.py  test_stats.py
