[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-quality"
version = "0.1.0"
description = "Dataset-centric CV toolkit: label-quality checks, mislabel detection, class-imbalance analysis, and active-learning loop orchestration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Sai Teja Erukude" }]
keywords = [
    "computer-vision",
    "active-learning",
    "label-quality",
    "dataset-centric",
    "coco",
    "annotation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "click>=8.1",
    "rich>=13.0",
    "tqdm>=4.66",
    "pycocotools>=2.0.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15"]
tensorflow = ["tensorflow>=2.13"]
all = ["torch>=2.0", "torchvision>=0.15", "tensorflow>=2.13"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
cvquality = "cvquality.cli.main:cli"

[project.urls]
Homepage = "https://github.com/SaiTeja-Erukude/cv-quality"
Repository = "https://github.com/SaiTeja-Erukude/cv-quality"
Issues = "https://github.com/SaiTeja-Erukude/cv-quality/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cvquality*"]

[tool.setuptools.package-data]
cvquality = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
